# ActionTest_RGB.NET

./: README.md
.github/workflows/: ci.yml  release.yml
RGB.NET.Core/: RGB.NET.Core.csproj  RGBSurface.cs
RGB.NET.Core/Devices/: AbstractRGBDeviceProvider.cs
RGB.NET.Core/Update/Devices/: DeviceUpdateTrigger.cs
RGB.NET.Devices.WS281X/: RGB.NET.Devices.WS281X.csproj  WS281XDeviceProvider.cs
RGB.NET.Devices.WS281X/Arduino/: ArduinoWS2812USBDevice.cs  ArduinoWS2812USBUpdateQueue.cs  ArduinoWS281XDeviceDefinition.cs
RGB.NET.Devices.WS281X/Generic/: SerialPortConnection.cs
RGB.NET.Devices.WS281X/HID/: HID.cs  HIDWS2812USBDevice.cs  HIDWS2812USBDeviceInfo.cs  HIDWS2812USBUpdateQueue.cs
RGB.NET.Devices.WS281X/Sketches/RGB.NET_hid/: CMakeLists.txt  RGB.NET.c  usb_descriptors.c
RGB.NET.Devices.WS281X/Sketches/Raspberry Pi Pico/: CMakeLists.txt  RGB.NET.c
